--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ env.REGISTRY }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.REGISTRY }}
           tags: |
             ${{ github.sha }}
             latest
