--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
       - '**'
 
 env:
-  REGISTRY: code-share-be
+  REGISTRY: ${{ secrets.REGISTRY }}
 
 jobs:
   build-and-deploy:
@@ -23,7 +23,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.REGISTRY }}
+            ${{ env.REGISTRY }}/code-share-be
           tags: |
             ${{ github.sha }}
             latest
@@ -31,8 +31,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push
         uses: docker/build-push-action@v5
