--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.7",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
