--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mysql2": "^3.9.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
