--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,13 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
     "concurrently": "^8.2.2",
+    "eslint": "8.42.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-prefer-arrow-functions": "3.3.2",
+    "eslint-plugin-prettier": "5.0.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
