--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "socket.io": "4.7.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
     "@typescript-eslint/eslint-plugin": "6.0.0",
