--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.7",
-    "socket.io": "4.7.5"
+    "socket.io": "4.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.12.11",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "concurrently": "^8.2.2",
